sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-public/middleware-fail2ban.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fail2ban
spec:
  plugin:
    fail2ban:
      allowlist:
        ip:
          - "10.0.0.0/8"
          - "172.16.0.0/12"
          - "192.168.0.0/16"
      rules:
        enabled: true
        # Window size to look for failures
        findtime: "30m"

        # Sinbin duration
        bantime: "3h"

        # Max failures before into the sinbin
        maxretry: 4

        # HTTP Response codes to count as failure
        statuscode: 400,401,403-499
