sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-public/deployment_overlay.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
spec:
  template:
    spec:
      containers:
        - name: traefik
          args:
            - --global.checknewversion=false
            - --global.sendAnonymousUsage=false
            - --api.insecure=true
            - --api.dashboard=true
            - --entryPoints.web.address=:80
            - --entryPoints.websecure.address=:443
            - --providers.kubernetesingress
            - --providers.kubernetesingress.ingressClass=ingress-public
            - --providers.kubernetesingress.ingressEndpoint.publishedService=traefik-public/traefik-ingress-controller
            - --providers.kubernetescrd.ingressclass=ingress-public
            #- --log.level=DEBUG
            #- --accesslog=true
