sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-public/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
  annotations:
    metallb.universe.tf/address-pool: servers-vlan
spec:
  selector:
    app.kubernetes.io/name: traefik-ingress-controller
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: websecure
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: dashboard
  type: LoadBalancer
