sites/indigo/clusters/dal-indigo-core-1/wave-2/overlays/traefik-public/network-policy-traefik.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-public
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    # Allow broad external and internal access
    - fromEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"   # HTTPS
            - port: "32406" # Plex
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoria-metrics
      toPorts:
        - ports:
            - port: "9100"
            - port: "8080"
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*.plex.svc.cluster.local"
              - matchPattern: "plex-plex-media-server"
              - matchPattern: "plex-plex-media-server.plex"
              - matchPattern: "*.anubis.svc.cluster.local"
              - matchPattern: "anubis-service"
              - matchPattern: "anubis-service.anubis"
              - matchPattern: "*.crowdsec.svc.cluster.local"
              - matchPattern: "crowdsec-service"
              - matchPattern: "crowdsec-service.crowdsec"
              - matchPattern: "crowdsec-appsec-service"
              - matchPattern: "crowdsec-appsec-service.crowdsec"
              - matchPattern: "*.authentik.svc.cluster.local"
              - matchPattern: "authentik-server"
              - matchPattern: "authentik-server.authentik"
              - matchPattern: "*.tailscale.svc.cluster.local"
              - matchPattern: "tailscale-webfinger"
              - matchPattern: "tailscale-webfinger.tailscale"
              - matchPattern: "*.matrix.svc.cluster.local"
              - matchPattern: "matrix-synapse"
              - matchPattern: "matrix-synapse.matrix"
              - matchPattern: "plugins.traefik.io"
              - matchPattern: "get.geojs.io"
    - toEndpoints:
        # Namespaces that host services
        # Access within the namespace is managed by the namespace itself
        - matchLabels:
            io.kubernetes.pod.namespace: plex
        - matchLabels:
            io.kubernetes.pod.namespace: anubis
        - matchLabels:
            io.kubernetes.pod.namespace: crowdsec
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale
        - matchLabels:
            io.kubernetes.pod.namespace: matrix
    - toFQDNs:
        - matchName: "plugins.traefik.io"
        - matchName: "get.geojs.io"
